<resources>
    <string name="app_name">SportApp</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="forgot">¿Olvidaste la contraseña?</string>
    <string name="terms1">He leido y acepto los </string>
    <string name="terms2">terminos y condiciones de uso</string>
    <string name="google">GOOGLE</string>
    <string name="facebook">FACEBOOK</string>

    <string name="bar_title_terms">Términos y Condiciones de Uso</string>
    <string name="termimos1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent rhoncus convallis metus at pretium. Vivamus at lacinia leo. Praesent velit elit, suscipit sit amet pulvinar id, imperdiet ac massa. Quisque molestie lectus rhoncus urna tempor, ut lacinia mi tempor. Praesent volutpat, ligula eget lobortis cursus, mauris libero consequat ligula, nec scelerisque erat ipsum tempor justo. Aliquam ornare faucibus augue vel faucibus. Ut sollicitudin commodo tortor eu faucibus. Vestibulum lacinia ligula sed tortor auctor, vitae sollicitudin lorem dapibus. Phasellus sed tincidunt odio.</string>
    <string name="termimos2">Praesent arcu nisi, auctor quis tempor id, vehicula non nulla. Sed a fermentum tellus, quis pharetra lorem. Fusce vehicula libero in ultricies varius. Suspendisse vel velit tortor. Aliquam non nisi eget lectus tempor consectetur sed in magna. Nullam tincidunt, nibh ut sodales suscipit, ante est luctus purus, sed pellentesque ipsum massa et quam. Proin sed sapien ultrices ex aliquet elementum sed et erat. Sed tincidunt felis sapien, a suscipit massa cursus et. Phasellus auctor tellus ac neque maximus accumsan. Morbi sit amet odio nec sapien pharetra elementum maximus id odio. Integer laoreet, neque id efficitur auctor, magna massa consequat justo, quis vehicula ipsum massa at sem. Morbi in ornare sapien, in luctus mauris. </string>
    <string name="terms3">Sed id libero auctor, lacinia lectus a, consequat nisl. Nam quis suscipit purus. Fusce at congue quam. Etiam congue imperdiet bibendum. Etiam at porttitor ipsum. Donec consectetur sapien in neque tempus tempus. Sed vulputate rutrum ultrices. Praesent in est leo. Suspendisse euismod purus id urna tempus pellentesque. Praesent condimentum nisl sit amet purus pulvinar sagittis. Cras purus felis, hendrerit et ornare ut, molestie id orci. Integer dictum consequat leo, id pretium urna tempus et. Donec nibh ante, laoreet id lorem vitae, vestibulum sollicitudin lorem. </string>
    <string name="password_again">Repetir contraseña</string>
    <string name="default_web_client_id" />
    <string name="running">Running</string>
    <string name="historial">Historial</string>
    <string name="hazte_premium">Hazte premium</string>
    <string name="cuenta">Cuenta</string>
    <string name="logout">Cerrar sesión</string>
    <string name="restablecer_ajustes">Restablecer Ajustes</string>
    <string name="level">Nivel</string>
    <string name="user">user_email</string>
    <string name="nav_hi">Hora de hacer deporte!</string>
    <string name="navigation_drawer_close">Cerrando</string>
    
    <string name="bar_tittle_record">Historial de carreras</string>
    
    <string name="orderby_dateZA">Fecha (Recientes primero)</string>
    <string name="orderby_durationZA">Duración (Mayores primero)</string>
    <string name="orderby_distanceZA">Distancia (Mayores primero)</string>
    <string name="orderby_avgspeedZA">Vel. Prom. (Mayores primero)</string>
    <string name="orderby_maxspeedZA">Vel. Máx. (Mayores primero)</string>

    <string name="orderby_dateAZ">Fecha (Antiguos primero)</string>
    <string name="orderby_durationAZ">Duración (Menores primero)</string>
    <string name="orderby_distanceAZ">Distancia (Menores primero)</string>
    <string name="orderby_avgspeedAZ">Vel. Prom. (Menores primero)</string>
    <string name="orderby_maxspeedAZ">Vel. Máx. (Menores primero)</string>

    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="finish">FINISH</string>
    <string name="rounds">Round 1</string>
    <string name="time_running">Running Time</string>
    <string name="time_walking">Walking Time</string>
    <string name="walking_clock">00:00</string>
    <string name="init_stop_watch_value">00:00:00</string>

    <string name="hard_volumen">Running music volume</string>
    <string name="soft_volumen">Walking music volume</string>
    <string name="notification_volumen">Notification volume</string>
    <string name="hard_position">00:00:00</string>
    <string name="hard_duration">01:00:00</string>
    <string name="soft_position">00:00:00</string>
    <string name="soft_duration">01:00:00</string>

    <string name="PopUpTotalRuns">Run: </string>
    <string name="PopUpTotalDistance">Kms: </string>
    <string name="PopUpTotalTime">Total time: </string>
    <string name="NoDataWarning">No data. Remember to activate the GPS </string>

    <string name="PopUpDurationTitle">DURATION</string>
    <string name="PopUpChallengeTitle">OBJETIVE</string>
    <string name="PopUpIntervalTitle">INTERVAL</string>
    <string name="PopUpDistanceTitle">DISTANCE</string>
    <string name="PopUpAvgSpeedTitle">AVERAGE SPEED</string>
    <string name="PopUpMaxSpeedTitle">MAX SPEED</string>
    <string name="PopUpUnevennessTitle">UNEVENESS</string>

    <string name="textNull"></string>
    <string name="textNoData">-</string>

    <string name="medalDistanceDescription">DISTENCE [Personal Record]</string>
    <string name="medalAvgSpeedDescription">Máx. Speed [Personal Record]</string>
    <string name="medalMaxSpeedDescription">Avg. Speed [Personal Record]</string>
    <string name="avg_speed">AVG SPEED</string>
    <string name="carrera_con_intervalos">Carrera con Intervalos</string>
    <string name="marcar_objetivo">Objetive</string>
    <string name="dos_puntos">:</string>
    <string name="hh_mm_ss">HH:MM:SS</string>
    <string name="km">KM</string>
    <string name="notificar_objetivo_alcanzado">Notify Objetive Reached</string>
    <string name="fin_de_carrera_autom">End run automatically</string>
    <string name="ajustes_de_audio">Audio config</string>
    <string name="total_time_13_24_58">Total time: 13:24:58</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="_01_00_00">01:00:00</string>
    <string name="km_h">KM/H</string>
</resources>