<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/gray_dark"
    android:weightSum="3"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@mipmap/banner"
        android:layout_weight="1.8"/>
    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/viewCustom"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:layout_weight="0.4"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.01">
        <EditText
            android:id="@+id/password_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            style="@style/viewCustom"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white" />
        <CheckBox
            android:id="@+id/show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/password_eye"

            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.01">
        <EditText
            android:id="@+id/password_repeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            style="@style/viewCustom"
            android:inputType="textPassword"
            android:hint="@string/password_again"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white" />
        <CheckBox
            android:id="@+id/show_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/password_eye"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/viewCustom"
        android:textSize="25sp"
        android:textAlignment="center"
        android:paddingTop="5dp"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/white"
        android:background="@color/green"
        android:layout_weight="0.3"
        android:onClick="login"/>

    <TextView
        android:id="@+id/forget_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/viewCustom"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:text="@string/forgot"
        android:textColor="@color/white"
        android:layout_weight="0.2"
        android:onClick="forgotPassword"/>

    <LinearLayout
        android:id="@+id/terminos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/terminos_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textSize="15dp"
            android:text="@string/terms1"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/salmon"
            android:text="@string/terms2"
            android:layout_marginLeft="5dp"
            android:onClick="goTerms"/>
    </LinearLayout>

    <Button
        android:id="@+id/google_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/google"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:drawableLeft="@drawable/google"/>

    <Button
        android:id="@+id/facebook_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/facebook"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:drawableLeft="@drawable/facebook"/>

</LinearLayout>